# kafka-stream-store

./: .gitignore  .gitlab-ci.yml  README.md  consumer.py  docker-compose.yml  prducers.py  producer.py  producers.py  pyproject.toml  setup_env.sh
.github/workflows/: ci-cd.yml
conceptual_demo_test/: .gitlab-ci.yml
demo_test/: pyproject.toml
grafana/dashboards/: pipeline.json
kafka/: Dockerfile.producer  producer.py
spark/: Dockerfile.sparkstreaming  pipeline.py
tests/: test_pipeline.py
tests/kafka/: producer.py
