[project]
name = "kafka-stream-store"
version = "0.1.0"
description = "A Kafka streaming store project"
authors = [ { name = "Author", email = "author@example.com" } ]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.dependencies]
confluent-kafka = "2.14.0"
faker = "40.15.0"
pyspark = "3.5.3"
pytest = "9.0.3"
py4j = "0.10.9.9"
pygments = "2.20.0"
packaging = "26.2"
pluggy = "1.6.0"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"